[OPENY-184] Fix membership calc buttons padding to aviod overlap with ajax throbber

--- a/themes/openy_themes/openy_rose/scss/modules/_membership.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_membership.scss
@@ -93,7 +93,7 @@ a[href="#step2"] {
   }
   .pull-left,
   .pull-right {
-    margin: 20px 0 10px 0;
+    margin: 30px 0 10px 0;
   }
   .node--type-membership.node--view-mode-calc-preview {
     margin-bottom: 100px;
